# peewee-sanic-rest

./: .coveragerc  .gitignore  LICENSE-MIT  README.rst  pyproject.toml  setup.py
peewee_sanic_rest/: core.py  exceptions.py  filters.py
tests/: test_core.py
